--- a/Deendayal_botz/template/dl.html
+++ b/Deendayal_botz/template/dl.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALL Movies Studio | {{file_name}}</title>
+    <title>MSLANDERS | {{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -103,9 +103,9 @@
                         <div class="abt-sec" id="sec3">
                             <h1>OUR ALL <span>BOTS</span> LIST</h1>
                             <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/MsAutoFilterPro_bot"><button>YAMI AF BOT
+                                <a class="magnet" href="https://t.me/MsAutoFilterPro_bot"><button>SAITAMA AF BOT
                                         </button></a>
-                                <a class="magnet" href="https://t.me/MsAutoFilter2_bot"><button>SIATAMA AF BOT
+                                <a class="magnet" href="https://t.me/MsAutoFilter2_bot"><button>YAMI AF BOT
                                         </button></a>
                             </div>
                         </div>
